crates/aranya-policy-compiler/tests/data/optional/coalesce_non_optional.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: int
  |
2 |     return 42 or 0
  |            ^^ expected `optional` but found `int`
